# Automated_Content_Spinner_For_SEO

./: .gitignore  README.md  pyproject.toml  setup.py
content_spinner/: __init__.py  content_spinner.py
content_spinner/config/: config.py  logging_config.py
content_spinner/data/: load_text_corpus.py
content_spinner/data/cache/: reviews.json  text_tokenized.json
content_spinner/models/: pentagram.py
content_spinner/models/model_file/: pentagram_model.pickle
notebooks/: content_spinner.ipynb
test/: conftest.py  test_pentagram.py
